--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,5 +22,34 @@
 }
 /*------fixed backgroud image-----------*/
 figure{
-  
+  position: relative;
+  width:100%;
+  height: 60%;
+  margin:0!important;
+}
+.fixed=wrap{
+  clip: rect(0,auto, auto,0);
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
+#fixed {
+  background-image: url('img/mac.png');
+  position: fixed;
+  display: block;
+  top:0;
+  left: 0;
+  width:100%;
+  heigth:100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  will-change: transform;
+}
+/*----Bootstrap padding fix------*/
+[class*="col"]{
+  padding: 1rem;
 }
