created changes in css

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,3 +53,26 @@ figure{
 [class*="col"]{
   padding: 1rem;
 }
+/*extra small (xs) devices (portrait phones, less than 576px)
+No media query since this is the default in bootstrap
+
+Small (sm) devices (landscape phaones, 576px and up)
+@media (,min-width: 576px){
+...
+}
+
+Medium (md) devices (desktops, 992px and up)
+@media (min-width: 768px){
+...
+}
+
+Large (lg) devices (desktops,992px and up)
+@media (min-width: 1200px){
+...
+}
+
+Extra(xl) large devices (large desktops,1200px and up)
+@media (min-width: 1200px){
+...
+}
+*/
